--- a/src/app/modules/menu-layout/components/meters/meters-modal/meters-modal.component.html
+++ b/src/app/modules/menu-layout/components/meters/meters-modal/meters-modal.component.html
@@ -136,8 +136,9 @@
             <nz-form-item  nzFlex>
               <nz-form-control>
                 <nz-select class="inputMedium" formControlName="funcionalidad" nzPlaceHolder="Generacion, Consumo" nzAllowClear>
-                      <nz-option nzLabel="Generacion" [nzValue]=true></nz-option>
-                      <nz-option nzLabel="Consumo" [nzValue]=false></nz-option>
+                      <nz-option nzLabel="Generación" [nzValue]=1></nz-option>
+                      <nz-option nzLabel="Consumo" [nzValue]=0></nz-option>
+                      <nz-option nzLabel="Inyección" [nzValue]=2></nz-option>
                 </nz-select>
               </nz-form-control>
             </nz-form-item>
