--- a/src/app/shared/components/digital-invoice/digital-invoice.component.css
+++ b/src/app/shared/components/digital-invoice/digital-invoice.component.css
@@ -161,7 +161,7 @@
 .origen-energia {
     display: grid;
     grid-template-columns: 1fr;
-    grid-template-rows: 1fr 1fr;
+    grid-template-rows: 1fr;
     gap: 1px 1px;
     grid-template-areas: ".";
     margin-top: 5px;
