--- a/src/app/shared/components/digital-invoice/digital-invoice.component.html
+++ b/src/app/shared/components/digital-invoice/digital-invoice.component.html
@@ -329,7 +329,7 @@
                 <tbody>
                   <tr>
                     <td class="tg-g6p1">Generación solar</td>
-                    <td class="tg-8jgo">{{dataInvoice.totalEnergiaFotovoltaicaActivaConsumida - dataInvoice.totalEnergiaDeInyeccionConsumida  | number:'1.2-2':'en-US' }} kWh</td>
+                    <td class="tg-8jgo">{{dataInvoice.totalEnergiaFotovoltaicaActivaConsumida| number:'1.2-2':'en-US' }} kWh</td>
                     <td class="tg-8jgo">L {{dataInvoice.CEFTotal - (dataInvoice.PBE * dataInvoice.totalEnergiaDeInyeccionConsumida)| number:'1.2-2':'en-US' }}</td>
                     <td class="tg-8jgo"> {{((dataInvoice.totalEnergiaFotovoltaicaActivaConsumida / dataInvoice.ESG) - (dataInvoice.totalEnergiaDeInyeccionConsumida / dataInvoice.ESG))  * 100 | number:'1.2-2':'en-US' }} %</td>
                   </tr>
@@ -337,11 +337,11 @@
                     <td class="tg-g6p1">Inyección solar</td>
                     <td class="tg-8jgo"> {{dataInvoice.totalEnergiaDeInyeccionConsumida  | number:'1.2-2':'en-US' }} kWh</td>
                     <td class="tg-8jgo">L {{dataInvoice.PBE * dataInvoice.totalEnergiaDeInyeccionConsumida  | number:'1.2-2':'en-US' }} </td>
-                    <td class="tg-8jgo"> {{(dataInvoice.totalEnergiaDeInyeccionConsumida / dataInvoice.ESG) * 100    | number:'1.2-2':'en-US' }} %</td>
+                    <td class="tg-8jgo"> {{(dataInvoice.PPPTT) * 100    | number:'1.2-2':'en-US' }} %</td>
                   </tr>
                   <tr>
                     <td class="tg-g6p1">Subtotal</td>
-                    <td class="tg-8jgo totales-tablas">{{ dataInvoice.totalEnergiaFotovoltaicaActivaConsumida | number:'1.2-2':'en-US' }} kWh</td>
+                    <td class="tg-8jgo totales-tablas">{{ dataInvoice.totalEnergiaFotovoltaicaActivaConsumida + dataInvoice.totalEnergiaDeInyeccionConsumida| number:'1.2-2':'en-US' }} kWh</td>
                     <td class="tg-8jgo totales-tablas">L {{ dataInvoice.CEFTotal | number:'1.2-2':'en-US'}}</td>
                     <td class="tg-8jgo totales-tablas"> {{(dataInvoice.totalEnergiaFotovoltaicaActivaConsumida / dataInvoice.ESG) * 100  | number:'1.2-2':'en-US' }} %</td>
                   </tr>
@@ -350,7 +350,7 @@
                   <tr>
                     <td class="tg-g6p1">Consumo cargas</td>
                     <td class="tg-8jgo">{{dataInvoice.totalLecturaActivaAjustada  | number:'1.2-2':'en-US' }} kWh</td>
-                    <td class="tg-8jgo">L {{dataInvoice.cargo[dataInvoice.cargo.length - 1].valorAjustado -  dataInvoice.CEFTotal  -  dataInvoice.cargo[dataInvoice.cargo.length - 3].valorAjustado| number:'1.2-2':'en-US' }}</td>
+                    <td class="tg-8jgo">L {{dataInvoice.cargo[dataInvoice.cargo.length - 1].valorAjustado -  dataInvoice.cargo[dataInvoice.cargo.length - 4].valorAjustado  -  dataInvoice.cargo[dataInvoice.cargo.length - 3].valorAjustado| number:'1.2-2':'en-US' }}</td>
                     <td class="tg-8jgo"> {{ (dataInvoice.PCFTotal) * 100 | number:'1.2-2':'en-US' }} %</td>
                   </tr>
                   <tr>
@@ -369,7 +369,7 @@
                 <tbody style="margin-top: 5px;">
                   <tr>
                     <td class="tg-g6p1">Total</td>
-                    <td class="tg-8jgo totales-tablas">{{ dataInvoice.totalLecturaActivaAjustada  +  (dataInvoice.totalEnergiaFotovoltaicaActivaConsumida) + (dataInvoice.PPPTT * dataInvoice.PT)| number:'1.2-2':'en-US' }} kWh</td>
+                    <td class="tg-8jgo totales-tablas">{{ dataInvoice.totalLecturaActivaAjustada  +  (dataInvoice.totalEnergiaFotovoltaicaActivaConsumida) + (dataInvoice.PPPTT * dataInvoice.PT) + dataInvoice.totalEnergiaDeInyeccionConsumida | number:'1.2-2':'en-US' }} kWh</td>
                     <td class="tg-8jgo totales-tablas">L {{ dataInvoice.cargo[dataInvoice.cargo.length - 1].valorAjustado  | number:'1.2-2':'en-US'}}</td>
                     <td class="tg-8jgo totales-tablas"> {{  ((dataInvoice.totalEnergiaFotovoltaicaActivaConsumida + dataInvoice.totalLecturaActivaAjustada + dataInvoice.PPPTT * dataInvoice.PT)/ (dataInvoice.ECR + dataInvoice.ESG)) * 100 | number:'1.2-2':'en-US' }} %</td>
                   </tr>
