--- a/src/app/shared/components/digital-invoice/digital-invoice.component.html
+++ b/src/app/shared/components/digital-invoice/digital-invoice.component.html
@@ -330,14 +330,14 @@
                   <tr>
                     <td class="tg-g6p1">Generación solar</td>
                     <td class="tg-8jgo">{{dataInvoice.totalEnergiaFotovoltaicaActivaConsumida| number:'1.2-2':'en-US' }} kWh</td>
-                    <td class="tg-8jgo">L {{dataInvoice.CEFTotal - (dataInvoice.PBE * dataInvoice.totalEnergiaDeInyeccionConsumida)| number:'1.2-2':'en-US' }}</td>
-                    <td class="tg-8jgo"> {{((dataInvoice.totalEnergiaFotovoltaicaActivaConsumida / dataInvoice.ESG) - (dataInvoice.totalEnergiaDeInyeccionConsumida / dataInvoice.ESG))  * 100 | number:'1.2-2':'en-US' }} %</td>
+                    <td class="tg-8jgo">L {{dataInvoice.PBE * dataInvoice.totalEnergiaFotovoltaicaActivaConsumida | number:'1.2-2':'en-US' }}</td>
+                    <td class="tg-8jgo"> {{((dataInvoice.totalEnergiaFotovoltaicaActivaConsumida / dataInvoice.ESG))  * 100 | number:'1.2-2':'en-US' }} %</td>
                   </tr>
                   <tr>
                     <td class="tg-g6p1">Inyección solar</td>
                     <td class="tg-8jgo"> {{dataInvoice.totalEnergiaDeInyeccionConsumida  | number:'1.2-2':'en-US' }} kWh</td>
                     <td class="tg-8jgo">L {{dataInvoice.PBE * dataInvoice.totalEnergiaDeInyeccionConsumida  | number:'1.2-2':'en-US' }} </td>
-                    <td class="tg-8jgo"> {{(dataInvoice.PPPTT) * 100    | number:'1.2-2':'en-US' }} %</td>
+                    <td class="tg-8jgo"> {{(dataInvoice.PPPTT) * 100  | number:'1.2-2':'en-US' }} %</td>
                   </tr>
                   <tr>
                     <td class="tg-g6p1">Subtotal</td>
