--- a/src/app/modules/menu-layout/components/contracts/modal-cargos-eeh/modal-cargos-eeh.component.html
+++ b/src/app/modules/menu-layout/components/contracts/modal-cargos-eeh/modal-cargos-eeh.component.html
@@ -20,7 +20,7 @@
                     <label>Valor en Lps.</label>
                     <nz-form-item  nzFlex>
                         <nz-form-control>
-                            <nz-input-number formControlName="valor" [ngModel]="0"  [nzPlaceHolder]="'460'" [nzStep]="1" [nzMin]="0" style="width: 475px;" (ngModelChange)="UpdateTotalCargos($event)"></nz-input-number>
+                          <input nz-input type="text" placeholder="Ingrese el valor monetario"  formControlName="valor" [ngModel]="0" style="width: 475px;" (ngModelChange)="UpdateTotalCargos($event)">
                         </nz-form-control>
                     </nz-form-item>
                 </div>
