--- a/src/app/modules/menu-layout/components/generated-invoices/generated-invoices.component.html
+++ b/src/app/modules/menu-layout/components/generated-invoices/generated-invoices.component.html
@@ -38,7 +38,7 @@
 
           </div>
           <div nz-col>
-            <button nz-button nzType="primary" nzSize="default" (click)="submitForm()">Generar Facturas</button>
+            <button nz-button nzType="primary" nzSize="default" (click)="submitForm()">Consultar</button>
           
 
           </div>
