--- a/src/app/modules/auth/components/verify-code/verify-code.component.html
+++ b/src/app/modules/auth/components/verify-code/verify-code.component.html
@@ -4,7 +4,7 @@
     <h3>Verificar codigo</h3>
     <div nz-row class="logo-container">
         <div nz-col [nzSpan]="12">
-            <img class="Logo" src="../../../../../assets/Images/Logo.png" alt="">
+            <img class="Logo" src="../../../../../assets/Images/Solar 2.png" alt="">
         </div>
     </div>
     <nz-form-item>    
