--- a/src/app/shared/components/digital-invoice/digital-invoice.component.css
+++ b/src/app/shared/components/digital-invoice/digital-invoice.component.css
@@ -3,6 +3,13 @@
     overflow: hidden;
     opacity: 0.6;
 }
+#logo {
+    margin-right: 15%;
+    justify-content: start;
+}
+#cliente {
+    justify-content: center;
+}
 
 .tg  {border-collapse:collapse;border-spacing:0; }
 .tg td{border-color:black;border-style:solid;border-width:1px;font-family:Arial, sans-serif;font-size:14px;
@@ -41,7 +48,7 @@
     background-color: #001529;
     display: flex;
     margin: 3% 10% 1% 10%;
-    justify-content: center;
+    justify-content: space-between;
 }
 
 .direccion {
