--- a/src/app/shared/components/menu-layout/menu-layout.component.html
+++ b/src/app/shared/components/menu-layout/menu-layout.component.html
@@ -116,6 +116,13 @@
                 </li>
               </div>
 
+              <div routerLink="prueba" nz-menu-item nzMatchRouter>
+                <li>
+                    <i nz-icon nzType="warning"></i>
+                    <span >Facturas canceladas</span>
+                </li>
+              </div>
+              
             </ul>
           </li>
         </ul>
